2001-11-11  Braden McDaniel  <braden@endoframe.com>

        * Move doc-comments to implementation files for VrmlBVolume,
          VrmlAABox, and VrmlBSphere.

2001-11-05  Thomas Flynn <tflynn@users.sourceforge.net>

	* Implement 6 more methods in ScriptJDK.cpp

	* Attempt to conform to coding standard for line length.

2001-11-01  Braden McDaniel  <braden@endoframe.com>

        * Some minor improvements to VrmlNodePtr.

        * Use VrmlNode * instead of VrmlNodePtr to store references to
          named nodes in VrmlNamespace. This avoids a circular reference
          (and should fix that annoying crash on exit).

2001-10-30  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Improve Navigation in "Examine Mode". Navigation speed is
          taken care.

2001-10-27  Braden McDaniel  <braden@endoframe.com>

        * Give up on trying to predict where the SpiderMonkey headers
          live. Users should supply this in CPPFLAGS when running
          configure.

        * In VrmlNodePtr constructor: assert that the value returned
          in the insertion result matches the argument VrmlNode *.

        * Clean up VrmlNodePtr::dispose().

        * Fixed crash on exit in VrmlNodePtr::dispose().

        * Using erase() instead of remove() for the node lists in
          VrmlScene is more efficient and avoids a crash on exit.

2001-10-17  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Fixes for bug #213579. Problem on invariant background under
          all viewpoint transformations.

2001-10-17  Braden McDaniel  <braden@endoframe.com>

        * Use variables resolved by configure to tell Java where .class
          files and libraries are installed.

        * Fixed memory leak involving inappropriate use of freeze() with
          ostrstream in `ScriptJDK.cpp'.

        * Java .class files are nolonger installed by `make install'.

        * JNI headers are nolonger generated. (They aren't strictly